wxc/include/ewxw/wxc_glue.h



/* ELJClient */
TClassDefExtend(ELJClient,wxClient)
TClass(ELJClient) ELJClient_Create( void* _eobj, void* _cnct );

void       ELJClient_Delete( TSelf(ELJClient) _obj );

void       ELJClient_MakeConnection( TSelf(ELJClient) _obj, void* host, TClass(wxServer) server, void* topic );


/* ELJConnection */
TClassDefExtend(ELJConnection,wxConnection)
int        ELJConnection_Advise( TSelf(ELJConnection) _obj, void* item, void* data, int size, int format );

void       ELJConnection_Compress( TSelf(ELJConnection) _obj, int on );

TClass(ELJConnection) ELJConnection_Create( void* _obj, void* buffer, int size );

TClass(ELJConnection) ELJConnection_CreateDefault( TSelf(ELJConnection) _obj );

void       ELJConnection_Delete( TSelf(ELJConnection) _obj );

int        ELJConnection_Disconnect( TSelf(ELJConnection) _obj );

int        ELJConnection_Execute( TSelf(ELJConnection) _obj, void* data, int size, int format );

int        ELJConnection_Poke( TSelf(ELJConnection) _obj, void* item, void* data, int size, int format );

void*      ELJConnection_Request( TSelf(ELJConnection) _obj, void* item, TClass(wxSize) size, int format );

void       ELJConnection_SetOnAdvise( TSelf(ELJConnection) _obj, void* _fnc );

void       ELJConnection_SetOnDisconnect( TSelf(ELJConnection) _obj, void* _fnc );

void       ELJConnection_SetOnExecute( TSelf(ELJConnection) _obj, void* _fnc );

void       ELJConnection_SetOnPoke( TSelf(ELJConnection) _obj, void* _fnc );

void       ELJConnection_SetOnRequest( TSelf(ELJConnection) _obj, void* _fnc );

void       ELJConnection_SetOnStartAdvise( TSelf(ELJConnection) _obj, void* _fnc );

void       ELJConnection_SetOnStopAdvise( TSelf(ELJConnection) _obj, void* _fnc );

int        ELJConnection_StartAdvise( TSelf(ELJConnection) _obj, void* item );

int        ELJConnection_StopAdvise( TSelf(ELJConnection) _obj, void* item );


/* ELJPrintout */
/*
TClassDefExtend(ELJPrintout,wxPrintout)
TClass(ELJPrintout) ELJPrintout_Create( void* title, void* _obj, void* _DoOnBeginDocument, void* _DoOnEndDocument, void* _DoOnBeginPrinting, void* _DoOnEndPrinting, void* _DoOnPreparePrinting, void* _DoOnPrintPage, void* _DoOnHasPage, void* _DoOnPageInfo );
void       ELJPrintout_Delete( TSelf(ELJPrintout) _obj );
TClass(wxDC) ELJPrintout_GetDC( TSelf(ELJPrintout) _obj );
void       ELJPrintout_GetPPIPrinter( TSelf(ELJPrintout) _obj, TPointOutVoid(_x,_y) );
void       ELJPrintout_GetPPIScreen( TSelf(ELJPrintout) _obj, TPointOutVoid(_x,_y) );
void       ELJPrintout_GetPageSizeMM( TSelf(ELJPrintout) _obj, TSizeOutVoid(_w,_h) );
void       ELJPrintout_GetPageSizePixels( TSelf(ELJPrintout) _obj, TSizeOutVoid(_w,_h) );
TStringLen ELJPrintout_GetTitle( TSelf(ELJPrintout) _obj, TStringOutVoid _buf );
TBool      ELJPrintout_IsPreview( TSelf(ELJPrintout) _obj );
void       ELJPrintout_SetDC( TSelf(ELJPrintout) _obj, TClass(wxDC) dc );
void       ELJPrintout_SetIsPreview( TSelf(ELJPrintout) _obj, int p );
void       ELJPrintout_SetPPIPrinter( TSelf(ELJPrintout) _obj, TPoint(x,y) );
void       ELJPrintout_SetPPIScreen( TSelf(ELJPrintout) _obj, TPoint(x,y) );
void       ELJPrintout_SetPageSizeMM( TSelf(ELJPrintout) _obj, TSize(w,h) );
void       ELJPrintout_SetPageSizePixels( TSelf(ELJPrintout) _obj, TSize(w,h) );
*/

/* ELJServer */
TClassDefExtend(ELJServer,wxServer)
TClass(ELJServer) ELJServer_Create( void* _eobj, void* _cnct );

void       ELJServer_Delete( TSelf(ELJServer) _obj );

int        ELJServer_Initialize( TSelf(ELJServer) _obj, TStringVoid name );